# Echidna

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  io.fortressia.Echidna.json  meson.build  sidebar.ui
.gitea/: PULL_REQUEST_TEMPLATE.md
.gitea/issue_templates/: Bug.md  Feature Request.md
.gitlab/issue_templates/: Bug.md  Feature Request.md
adw-gschema-auto/: Cargo.toml  README.md
adw-gschema-auto/src/: lib.rs
editor/: Cargo.toml  build.rs  io.fortressia.Echidna.json  meson.build
editor/build-aux/: cargo.sh
editor/data/: io.fortressia.Echidna.appdata.xml.in  io.fortressia.Echidna.desktop.in  io.fortressia.Echidna.gschema.xml  meson.build
editor/data/icons/: meson.build
editor/po/: POTFILES  meson.build
editor/resources/: resources.gresource.xml  sidebar.ui  style.css  window.ui  workspace-factory.ui  workspace.ui
editor/src/: config.rs  echidna.gresource.xml  main.rs  meson.build  style.css
editor/src/components/: mod.rs
editor/src/components/app/: imp.rs  load_css.rs  mod.rs
editor/src/components/editor/: editor.blp  editor.ui  imp.rs  mod.rs
editor/src/components/getting_started/: getting-started.ui  imp.rs  mod.rs
editor/src/components/sidebar/: imp.rs  mod.rs  sidebar.blp  sidebar.ui
editor/src/components/tab_label/: imp.rs  mod.rs
editor/src/components/window/: file.rs  imp.rs  menu.blp  menu.ui  menubar.rs  mod.rs  preferences.ui  style.css  window.blp  window.ui  workspace.rs
editor/src/components/window/workspace/: mod.rs  open_folder.rs
editor/src/components/workspace/: builder.ui  mod.rs  workspace.blp
editor/src/components/workspace/model/: file_info.rs  imp.rs  mod.rs
editor/src/components/workspace/view/: imp.rs  mod.rs
editor/src/lib/: closeable_tab.rs  file_chooser.rs  mod.rs  to_imp.rs
libchidna/: Cargo.toml  build.rs
libchidna/resources/: resources.gresource.xml  vtb-factory.ui  vtb.ui
libchidna/src/: lib.rs
libchidna/src/iterables/: mod.rs
libchidna/src/vertical_tab_bar/: imp.rs  mod.rs
libchidna/src/vertical_tab_bar/model/: imp.rs  mod.rs
libchidna/src/vertical_tab_bar/page/: imp.rs  mod.rs
src/: echidna.ui  editor.cpp  editor.h  main.cpp  main.rs  metadata.rs
src/app/: imp.rs  menubar.rs  mod.rs  workspace.rs
src/components/: mod.rs
src/components/app/: imp.rs  load_css.rs  mod.rs
src/components/editor/: editor.ui  imp.rs  mod.rs
src/components/getting_started/: getting-started.ui  imp.rs  mod.rs
src/components/sidebar/: imp.rs  mod.rs  sidebar.ui
src/components/tab_label/: imp.rs  mod.rs  tab-label.ui
src/components/window/: file.rs  imp.rs  menu.ui  menubar.rs  mod.rs  sidebar.rs  window.ui  workspace.rs
src/components/window/workspace/: mod.rs  open_folder.rs  recursive_add_files.rs
src/lib/: closeable_tab.rs  mod.rs  to_imp.rs
src/met/: core-editor.cpp  core-editor.h  editor.cpp  editor.h
ui/: echidna-qt.ui  echidna.ui  form.ui  menu.ui  resources.qrc  window.ui
