[package]
name = "echidna"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.3.0", package = "gtk4" }
gio = { version = "0.14.6", package = "gio" }
glib = "0.14.5"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
relative-path = "1.5.0"
gdk = { version = "0.3.0", package = "gdk4"}
sourceview = { package = "sourceview5", version = "0.3.0"}