[package]
name = "echidna-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.68"
serde = { version = "^1.0.130", features = ["derive"] }
adw = { package = "libadwaita", version = "^0.1" }
relative-path = "^1.5.0"
sourceview = { package = "sourceview5", version = "^0.4" }
once_cell = "1"
gtk = { package = "gtk4", version = "^0.4" }
adw-gschema-auto = { path = "../adw-gschema-auto" }
[build-dependencies]
gtk = { package = "gtk4", version = "^0.4" }