[package]
name = "libchidna"
version = "0.1.0"
edition = "2021"


[lib]
name = "libchidna"
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { package = "libadwaita", version = "^0.1" }
once_cell = "1"
gtk = { package = "gtk4", version = "^0.4" }


[build-dependencies]
gtk = { package = "gtk4", version = "^0.4" }